--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/tfe_ic_app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/daengo"
+        android:label="@string/my_app_name"
+        android:roundIcon="@mipmap/daengo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.ImageClassification">
         <activity
